feat: add ishare 2.1.1 support and introduce version env var
